# LTLCodeGen

./: README.md  TODO.md  index.html  real_world_evaluation_prompts.yaml
SSMI/SSMI-Mapping/: CMakeLists.txt
car_control/config/: power_diagram_gains.yaml
car_control/src/: DDControl.cpp  power_diagram_control.cpp  power_diagram_node.cpp
jackal_solar_sim/: CMakeLists.txt  package.xml
jackal_solar_sim/launch/: launch_jackal_office.launch  launch_mapping.launch  launch_planning.launch  semantic_init.launch
jackal_solar_sim/models/: husky.sdf  jackal.sdf  jackal.urdf  office.sdf  room.sdf
jackal_solar_sim/rviz/: mapping.rviz  planning.rviz
jackal_solar_sim/scripts/: dynamic_tf.py  dynamic_tf_solar.py  set_env_variables.sh
label_map/: CMakeLists.txt  package.xml
label_map/config/: message.yaml
label_map/launch/: label_map.launch
label_map/maps/: occ_map.npy  occ_map_metadata.npy  semantic_map.npy
label_map/scripts/: ap_pub.py  get_unique.py  label_map_ros.py  labelmap_radius.py  semantic_slice_pub.py
solar_planner/: CMakeLists.txt  package.xml
solar_planner/include/solar_planner/: astar_nx.h  grid_map.h  grid_map_utils.h  planning_interface.h
solar_planner/include/solar_planner/environments/: planning_spot_2d.h
solar_planner/scripts/: tracker_node.py  tracker_odom_node.py
solar_planner/src/: ltl_planner_node.cpp
speech_to_ltl/: CMakeLists.txt  package.xml
speech_to_ltl/scripts/: ltl_translate_node.py  ltl_translator.py  model.py  speech2text.py  yolo_parser.py  yolo_prompt.py
yolo_seg/: CMakeLists.txt  package.xml
(+98 files in other folders)
